--- a/res/layout/activity_loading.xml
+++ b/res/layout/activity_loading.xml
@@ -6,6 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:id="@+id/loading_layout"
     tools:context="com.example.momeme.LoadingActivity" >
 
     <TextView
